--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "dizajner",
   "version": "1.0.0",
   "description": "Responisive portfolio website",
-  "main": "index.js",
-  "homepage": "https://github.com/milosmirkovic484484.github.io/graphic-design-nikola",
+  "main": "index.js", 
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy": "gh-pages -d dist"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "Milos Mirkovic",
   "license": "MIT",
